--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,30 @@ footer{
     height: 50px;
 }
 
+.bpost{
+    background-color: #264d73;
+}
+
+.create_post{
+margin: 100px 200px;
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 18px;
+color:#264d73;
+}
+
+.create_post h3{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 30px;
+    color: #264d73;
+}
+
+.create_post .fbtn{
+    text-align: center;
+}
+
+.btn-lg{
+    background:#264d73; 
+    color:white;
+    width: 25%;
+}
